--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,36 @@
+* {
+    font-family: Montserrat;
+}
+
 .App {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
+}
+
+form {
+    padding: 30px 60px;
+    box-shadow: 1px 0px 22px 2px rgba(0, 0, 0, .2);
+    border-radius: 15px;
+}
+
+h1 {
+    text-align: center;
+    color: lightseagreen;
+    font-weight: bold;
+}
+
+button {
+    width: 100%;
+    height: 50px;
+    border: none;
+    padding: 10px;
+    background-color: lightseagreen;
+    font-weight: bold;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 20px;
 }
