--- a/client/src/components/FormInput.css
+++ b/client/src/components/FormInput.css
@@ -1,4 +1,43 @@
+.formInput {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
+
 input {
     padding: 15px;
     margin: 10px 0px;
+    border-radius: 5px;
+    border: 1px solid gray;
+}
+
+input[type="date" i] {
+    color: gray;
+}
+
+label {
+    margin-top: 5px;
+    font-size: 14px;
+    text-transform: capitalize;
+    color: gray;
+}
+
+span {
+    color: red;
+    font-size: 14px;
+    padding: 3px;
+    display: none;
+}
+
+
+input:invalid[focused="true"] {
+    border: 1px solid red;
+}
+
+input:invalid[focused="true"] ~ span {
+    display: block;
+}
+
+input:valid[focused="true"] {
+    border: 1px solid forestgreen;
 }
