--- a/client/src/components/FormInput.css
+++ b/client/src/components/FormInput.css
@@ -41,3 +41,8 @@ input:invalid[focused="true"] ~ span {
 input:valid[focused="true"] {
     border: 1px solid forestgreen;
 }
+
+button:disabled {
+    background-color: rgba(0, 0, 0, .4);
+    cursor: not-allowed;
+}
